@startuml

title __WEEK10-WEEK10_31.FARMSIMULATOR's Class Diagram__\n

  package  {
    package farmsimulator {
      interface Alive {
      }
    }
  }
  

  package  {
    package farmsimulator {
      interface Alive {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class BulkTank {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class BulkTank {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Cow {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Cow {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Main {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Main {
      }
    }
  }
  

  package  {
    package farmsimulator {
      interface Milkable {
      }
    }
  }
  

  package  {
    package farmsimulator {
      interface Milkable {
      }
    }
  }
  

  package  {
    package farmsimulator {
      class PasswordRandomizer {
      }
    }
  }
  

  Cow -up-|> Milkable
  Cow -up-|> Alive
  Cow -up-|> BulkTank
  Cow -up-|> Milkable
  Cow -up-|> Alive
  Cow -up-|> BulkTank


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
